# pdb_cpp

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  README.md  benchmark_common.csv  check_dockq.py  compare_speed.py  head  main  pyproject.toml  requirements.txt  sequence  sequence_align  sequence_align_claude  setup.py  simple_test.py  test.py  test_claude.cpp  test_coor_align_cpp.py  test_pdb_numpy.py  test_simple_align.py  test_tm_align.ipynb
.github/workflows/: ci.yml
benchmark/: README.md  benchmark_common.csv  common_speed_9X0F.csv  common_speed_comparison.csv  common_speed_smoke.csv  compare_common_speed.py  compare_dockq_speed.py  compare_io_speed.py  csv_to_markdown.py  dockq_vs_pdb_cpp.csv  dockq_vs_pdb_cpp.md  io_speed_9X0F.csv  io_speed_comparison.csv  plot_benchmark_results.py  plot_dockq_benchmark.py  plot_io_histogram.py  plot_manuscript_figure.py
docs/source/: basic_example.md  conf.py  contributing.md  functionality.md  index.rst  installation.md  logo_prompt.txt  modules.rst  pdb_cpp.analysis.rst  pdb_cpp.data.rst  pdb_cpp.rst  quick_recipes.md  readme.rst
scripts/: asan_core_only.sh  generate_sasa_reference_values.py  valgrind_core_only.sh
src/pdb_cpp/: Coor.cpp  Coor.h  Model.cpp  Model.h  TMAlign.h  TMalign.py  TMalign_iface.h  TMalign_wrapper.cpp  __init__.py  _align.c  _align.h  _pyprops.py  align.cpp  align.h  alignement.py  alignment.py  analysis.py  cli_dockq.py  crystal_pack.h  geom.h  geom.py  hbond.py  interaction.py  main.cpp  model_pybind.cpp  pybind.cpp  rcsb.py  salt_bridge.py  sasa.py  select.cpp  select.h  select.py  seq_align.cpp  seq_align.h  sequence.cpp  sequence.h  sequence.py  sequence_align.cpp  sequence_align.h  test.py
src/pdb_cpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pdb_cpp/_core/: Coor.cpp  Coor.h  Model.cpp  Model.h  TMalign_iface.h  TMalign_wrapper.cpp  align.cpp  align.h  geom.h  hbond.h  pybind.cpp  sasa.cpp  sasa.h  select.cpp  select.h  seq_align.cpp  seq_align.h  sequence.cpp  sequence.h
src/pdb_cpp/analysis/: __init__.py  dockq.py  hbonds.py  interaction.py  salt_bridge.py  sasa.py
src/pdb_cpp/data/: __init__.py  blosum.py  res_dict.py  residue.h
src/pdb_cpp/format/: encode.cpp  encode.h  mmcif.cpp  pdb.cpp  pdb.h
src/pdb_cpp/oldies/: atom_array.cpp  pdb_cpp.cpp  pdbdata.cpp  test.cpp  vector.cpp
src/pdb_cpp/pdb_cpp.egg-info/: PKG-INFO  entry_points.txt  requires.txt
src/pdb_cpp/tests/: __init__.py  datafiles.py  test_TMAlign.py  test_alignement.py  test_coor_align.py  test_mmcif.py  test_pdb.py  test_select.py  (+1 more)
tests/: datafiles.py  dockq_reference_values.py  sasa_reference_values.py  test_TMAlign.py  test_alignment.py  test_analysis.py  test_coor_align.py  test_dockq.py  test_encode.py  test_formats.py  test_geom.py  test_hbond.py  test_interaction.py  test_mmcif.py  test_pdb.py  test_rcsb.py  test_salt_bridge.py  test_sasa.py  test_select.py
tests/input/: 1A0A.cif  1y0m.gro  fold_2026_03_10_11_53_model_4.cif
(+21 files in other folders)
