[build-system]
requires = ["setuptools", "numpy>=1.2", "pybind11==2.13"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb-cpp"
version = "0.0.1"
dynamic = ["readme"]
description = "Pdb_cpp is a python library allowing simple operations on pdb coor files."
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.2",
    "pybind11==2.13",
]
authors = [
    { name = "Samuel Murail", email = "samuel.murail@u-paris.fr" },
]
keywords = [
    "Coor",
    "Model",
    "Numpy",
    "PDB",
    "Python",
    "pdb_cpp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]

[project.license]
file = "LICENSE"

[project.scripts]
pdb_cpp = "pdb_cpp.__main__:main"

[project.urls]
Homepage = "https://pdb-cpp.readthedocs.io/en/latest/"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]
