[build-system]
requires = ["setuptools", "pybind11==2.13"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb-cpp"
version = "0.1.0"
readme = "README.md"
description = "Pdb_cpp is a python library allowing simple operations on pdb coor files."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
]
authors = [
    { name = "Samuel Murail", email = "samuel.murail@u-paris.fr" },
]
keywords = [
    "Coor",
    "Model",
    "Numpy",
    "PDB",
    "Python",
    "pdb_cpp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

license = "GPL-2.0-or-later"

[project.urls]
Homepage = "https://pdb-cpp.readthedocs.io/en/latest/"
Repository = "https://github.com/samuelmurail/pdb_cpp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdb_cpp = ["data/*.txt"]
